--- a/site/resources/styles/core/quotes.less
+++ b/site/resources/styles/core/quotes.less
@@ -56,7 +56,7 @@
   border-width: 0;
   border-left-width: @hairline_border_width;
   padding: 0 0 0 @standard_spacing;
-  margin-left: @small_spacing;
+  margin-left: @standard_spacing;
 }
 
 .pullquote.left,
@@ -66,7 +66,7 @@
   border-width: 0;
   border-right-width: @hairline_border_width;
   padding: 0 @standard_spacing 0 0;
-  margin-right: @small_spacing;
+  margin-right: @standard_spacing;
 }
 
 .quoter
