Move theme-base and theme-base-dark to styles

--- a/site/resources/styles/theme-base-dark.less
+++ b/site/resources/styles/theme-base-dark.less
@@ -1,4 +1,4 @@
-@import "../core/core";
+@import "core/core";
 
 @background_color: black;
 @accent_background_color: lighten(@background_color, 12%);
