Remove vertical padding in full-screen mode
https://www.earthli.com/projects/view_job.php?id=2198

--- a/site/resources/styles/core/viewport.less
+++ b/site/resources/styles/core/viewport.less
@@ -19,12 +19,23 @@
   {
     .flex-direction(column);
 
+    .header
+    {
+      padding-top: 0;
+
+      .nav-box
+      {
+        margin-top: @small_spacing;
+      }
+    }
+
     .page-body
     {
       .flex-display-and-flex();
       .flex-direction(column);
       min-height: 0;
       min-width: 0;
+      margin-bottom: @small_spacing;
 
       .columns
       {
