--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2501,7 +2501,7 @@ h3 {
   z-index: -1;
 }
 .timeline .years > div {
-  width: 16.12903226%;
+  width: 14.18571429%;
   padding-left: 5px;
   border-left: 1px solid silver;
   opacity: .6;
@@ -2510,10 +2510,10 @@ h3 {
   box-sizing: border-box;
 }
 .timeline .years > div:last-child {
-  width: 3.22580645%;
+  width: 0;
 }
 .timeline .projects {
-  padding-top: 60px;
+  padding-top: 30px;
 }
 section:first-child > h2 {
   visibility: hidden;
@@ -2589,70 +2589,66 @@ section div.contact ul {
   margin: 5px 0;
 }
 .level-expert {
-  background-color: #82d8d8;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #004c6d;
 }
 .level-proficient {
-  background-color: #a1e2e2;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #6996b3;
 }
 .level-competent {
-  background-color: #c1ecec;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
-}
-.level-advanced-beginner {
-  background-color: #e0f5f5;
-  white-space: nowrap;
-  padding: 2px;
-  margin: 1px 0;
-}
-.level-novice {
-  background-color: #f3fbfb;
-  white-space: nowrap;
-  padding: 2px;
-  margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #c1e7ff;
 }
 .support {
-  background-color: #e5be97;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #ffa600;
 }
 .developer {
-  background-color: #a0bfed;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #ff6361;
 }
 .lead-developer {
-  background-color: #82d8d8;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #003f5c;
 }
 .architect {
-  background-color: #b8d8a7;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #bc5090;
 }
 .project-manager {
-  background-color: #e6aecc;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  box-sizing: border-box;
+  background-color: #58508d;
 }
 .employee {
-  background-color: #e8e8e8;
   white-space: nowrap;
   padding: 2px;
   margin: 1px 0;
+  background-color: #E8E8E8;
   position: absolute;
   top: 0;
   height: 100%;
@@ -2661,28 +2657,28 @@ section div.contact ul {
   box-sizing: border-box;
 }
 .project-manager.architect.lead-developer {
-  background: repeating-linear-gradient(-45deg, #b8d8a7, #b8d8a7 10px, #e6aecc 10px, #e6aecc 20px, #82d8d8 20px, #82d8d8 30px);
+  background: repeating-linear-gradient(-45deg, #bc5090, #bc5090 10px, #58508d 10px, #58508d 20px, #003f5c 20px, #003f5c 30px);
 }
 .project-manager.architect.developer {
-  background: repeating-linear-gradient(-45deg, #b8d8a7, #b8d8a7 10px, #e6aecc 10px, #e6aecc 20px, #a0bfed 20px, #a0bfed 30px);
+  background: repeating-linear-gradient(-45deg, #bc5090, #bc5090 10px, #58508d 10px, #58508d 20px, #ff6361 20px, #ff6361 30px);
 }
 .architect.lead-developer {
-  background: repeating-linear-gradient(-45deg, #b8d8a7, #b8d8a7 10px, #82d8d8 10px, #82d8d8 20px);
+  background: repeating-linear-gradient(-45deg, #bc5090, #bc5090 10px, #003f5c 10px, #003f5c 20px);
 }
 .architect.developer {
-  background: repeating-linear-gradient(-45deg, #b8d8a7, #b8d8a7 10px, #a0bfed 10px, #a0bfed 20px);
+  background: repeating-linear-gradient(-45deg, #bc5090, #bc5090 10px, #ff6361 10px, #ff6361 20px);
 }
 .project-manager.lead-developer.support {
-  background: repeating-linear-gradient(-45deg, #e6aecc, #e6aecc 10px, #82d8d8 10px, #82d8d8 20px, #e5be97 20px, #e5be97 30px);
+  background: repeating-linear-gradient(-45deg, #58508d, #58508d 10px, #003f5c 10px, #003f5c 20px, #ffa600 20px, #ffa600 30px);
 }
 .project-manager.developer.support {
-  background: repeating-linear-gradient(-45deg, #e6aecc, #e6aecc 10px, #a0bfed 10px, #a0bfed 20px, #e5be97 20px, #e5be97 30px);
+  background: repeating-linear-gradient(-45deg, #58508d, #58508d 10px, #ff6361 10px, #ff6361 20px, #ffa600 20px, #ffa600 30px);
 }
 .lead-developer.support {
-  background: repeating-linear-gradient(-45deg, #82d8d8, #82d8d8 10px, #e5be97 10px, #e5be97 20px);
+  background: repeating-linear-gradient(-45deg, #003f5c, #003f5c 10px, #ffa600 10px, #ffa600 20px);
 }
 .developer.support {
-  background: repeating-linear-gradient(-45deg, #a0bfed, #a0bfed 10px, #e5be97 10px, #e5be97 20px);
+  background: repeating-linear-gradient(-45deg, #ff6361, #ff6361 10px, #ffa600 10px, #ffa600 20px);
 }
 .single-line > div:nth-child(2) {
   margin-top: -30px;
