--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2485,6 +2485,9 @@ h2 {
 h3 {
   margin-top: 45px;
 }
+h4 {
+  font-size: 120%;
+}
 .footer {
   display: none;
 }
@@ -2503,6 +2506,7 @@ h3 {
 }
 .timeline .years > div {
   flex-basis: calc(( 5  /  35 ) * 100%);
+  padding-left: 5px;
   border-left: 1px solid silver;
   box-sizing: border-box;
   opacity: .6;
@@ -2570,8 +2574,19 @@ section div.contact ul {
   }
 }
 @media (max-width: 600px) {
-  table.projects tbody tr td:nth-child(2) span:first-child {
-    font-size: 70%;
+  table.projects tbody tr td {
+    font-size: 80%;
+  }
+  table.projects tbody tr th:first-child {
+    display: none !important;
+  }
+}
+@media (max-width: 320px) {
+  table.projects tbody tr td {
+    font-size: 65%;
+  }
+  table.projects tbody tr th:first-child {
+    display: none !important;
   }
 }
 @media print {
@@ -2627,14 +2642,17 @@ section div.contact ul {
   background-color: #58508d;
 }
 .employee {
+  position: absolute;
+  width: 100%;
+  height: calc(100%  -  30px);
+  z-index: -2;
+}
+.employee span:nth-child(2) {
   margin: 1px 0;
   background-color: #E8E8E8;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  z-index: -2;
-  padding-top: 30px;
-  box-sizing: border-box;
+}
+.project-manager.architect.lead-developer.support {
+  background: repeating-linear-gradient(-45deg, #bc5090, #bc5090 10px, #58508d 10px, #58508d 20px, #003f5c 20px, #003f5c 30px, #ffa600 30px, #ffa600 40px);
 }
 .project-manager.architect.lead-developer {
   background: repeating-linear-gradient(-45deg, #bc5090, #bc5090 10px, #58508d 10px, #58508d 20px, #003f5c 20px, #003f5c 30px);
