Improve legend-rendering

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -176,6 +176,7 @@
 @h5_font_size: 100%;
 @detail_font_size: 85%;
 @micro_font_size: 75%;
+@nano_font_size: 65%;
 
 @select_control_height: 4ex;
 @button_icon_vertical_offset: .25ex;
