--- a/site/resources/styles/core/table.less
+++ b/site/resources/styles/core/table.less
@@ -5,6 +5,13 @@ table
   margin: 0;
   padding: 0;
 
+  caption
+  {
+    text-align: left;
+    border-bottom: @hairline_border_width solid @standard_border_color;
+    margin-bottom: @small_spacing;
+  }
+
   td, th
   {
     padding: 0;
