remove conflict with standard "chart" class

--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2499,7 +2499,7 @@ h4 {
 .timeline {
   position: relative;
 }
-.timeline .chart {
+.timeline .timeline-box {
   position: relative;
 }
 .timeline .legend {
