--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2535,8 +2535,60 @@ h4 {
 .timeline .years > div:after {
   content: attr(title);
 }
-.timeline .projects {
+.timeline table.projects {
+  display: block;
   padding-top: 30px;
+}
+.timeline table.projects th {
+  border: none;
+}
+.timeline table.projects thead {
+  display: none;
+}
+.timeline table.projects tbody {
+  display: block;
+}
+.timeline table.projects tbody tr {
+  display: block;
+}
+.timeline table.projects tbody tr th:first-child {
+  display: block;
+  position: absolute;
+  left: -15ex;
+  width: 14ex;
+  text-align: right;
+  font-size: 80%;
+}
+.timeline table.projects tbody tr td {
+  display: block;
+}
+.timeline table.projects tbody tr td:nth-child(2) {
+  display: flex;
+}
+.timeline table.projects tbody tr td:nth-child(2) span:first-child:not(:empty) {
+  text-align: right;
+  padding-right: .5em;
+  box-sizing: border-box;
+}
+.timeline table.projects tbody tr td:nth-child(2) span:last-child:not(:empty) {
+  padding-left: .5em;
+  box-sizing: border-box;
+}
+.timeline table.projects tbody tr td:nth-child(2) span:nth-child(3) {
+  white-space: nowrap;
+}
+.timeline table.projects tbody tr td:nth-child(2).level-expert:after {
+  /*TODO Fix these appends*/
+  content: " (Expert)";
+}
+.timeline table.projects tbody tr td:nth-child(2).level-proficient:after {
+  content: " (Proficient)";
+}
+.timeline table.projects tbody tr td:nth-child(2).level-competent:after {
+  content: " (Competent)";
+}
+.timeline table.projects tbody tr td:nth-child(3) {
+  display: none;
 }
 section:first-child > h2 {
   visibility: hidden;
