--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2497,29 +2497,29 @@ h4 {
 .footer {
   display: none;
 }
-.timeline {
+.text-flow .timeline {
   position: relative;
 }
-.timeline .timeline-box {
+.text-flow .timeline .timeline-box {
   position: relative;
 }
-.timeline .timeline-box table {
+.text-flow .timeline .timeline-box table {
   display: block;
   padding-top: 30px;
 }
-.timeline .timeline-box table th {
+.text-flow .timeline .timeline-box table th {
   border: none;
 }
-.timeline .timeline-box table thead {
+.text-flow .timeline .timeline-box table thead {
   display: none;
 }
-.timeline .timeline-box table tbody {
+.text-flow .timeline .timeline-box table tbody {
   display: block;
 }
-.timeline .timeline-box table tbody tr {
+.text-flow .timeline .timeline-box table tbody tr {
   display: block;
 }
-.timeline .timeline-box table tbody tr th:first-child {
+.text-flow .timeline .timeline-box table tbody tr th:first-child {
   display: block;
   position: absolute;
   left: -15ex;
@@ -2527,68 +2527,76 @@ h4 {
   text-align: right;
   font-size: 80%;
 }
-.timeline .timeline-box table tbody tr td {
+.text-flow .timeline .timeline-box table tbody tr td {
   display: block;
 }
-.timeline .timeline-box table tbody tr td:nth-child(2) {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2) {
   display: flex;
 }
-.timeline .timeline-box table tbody tr td:nth-child(2) span:first-child:not(:empty) {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2) span:first-child:not(:empty) {
   text-align: right;
   padding-right: .5em;
   box-sizing: border-box;
 }
-.timeline .timeline-box table tbody tr td:nth-child(2) span:last-child:not(:empty) {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2) span:last-child:not(:empty) {
   padding-left: .5em;
   box-sizing: border-box;
 }
-.timeline .timeline-box table tbody tr td:nth-child(2) span:nth-child(3) {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2) span:nth-child(3) {
   white-space: nowrap;
 }
-.timeline .timeline-box table tbody tr td:nth-child(2).level-expert:after {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2).level-expert:after {
   /*TODO Fix these appends*/
   content: " (Expert)";
 }
-.timeline .timeline-box table tbody tr td:nth-child(2).level-proficient:after {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2).level-proficient:after {
   content: " (Proficient)";
 }
-.timeline .timeline-box table tbody tr td:nth-child(2).level-competent:after {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(2).level-competent:after {
   content: " (Competent)";
 }
-.timeline .timeline-box table tbody tr td:nth-child(3) {
+.text-flow .timeline .timeline-box table tbody tr td:nth-child(3) {
   display: none;
 }
-.timeline .legend {
+.text-flow .timeline .legend {
   position: absolute;
   font-size: 75%;
   left: 15px;
   top: 15px;
 }
-.timeline .legend.early {
+.text-flow .timeline .legend.early {
   left: auto;
   right: 15px;
 }
-.timeline .legend td {
-  width: 20px;
+.text-flow .timeline .legend caption:after {
+  content: attr(title);
 }
-.timeline .years {
+.text-flow .timeline .legend th:after {
+  content: attr(title);
+}
+.text-flow .timeline .legend td {
+  width: 20px;
+  line-height: 130%;
+  padding: 0;
+}
+.text-flow .timeline .years {
   display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: -1;
 }
-.timeline .years > div {
+.text-flow .timeline .years > div {
   flex-basis: calc(( 5  /  35 ) * 100%);
   padding-left: 5px;
   border-left: 1px solid #c7c7c7;
   box-sizing: border-box;
   opacity: .6;
 }
-.timeline .years > div:last-child {
+.text-flow .timeline .years > div:last-child {
   border-right: 1px solid #c7c7c7;
 }
-.timeline .years > div:after {
+.text-flow .timeline .years > div:after {
   content: attr(title);
 }
 .text-flow section div.contact {
