--- a/site/resources/styles/core/structure.less
+++ b/site/resources/styles/core/structure.less
@@ -66,7 +66,7 @@ body
 
       .nav-box
       {
-        .non-intrusive-x-spacing();
+        .regular-x-spacing();
         .clear-both();
         margin-top: @standard_spacing;
         padding-bottom: @small_spacing;
